--- a/c/readme.adoc
+++ b/c/readme.adoc
@@ -80,3 +80,24 @@ In order to open the project in Eclipse with CDT and cmake4eclipse plugin, perfo
 Additionaly (https://github.com/15knots/cmake4eclipse/issues/45#issuecomment-321658454) to make CDT see jni.h:
 * Project properties → C/C++ General → Preprocessor include paths ... → Providers and check CMAKE_EXPORT_COMPILE_COMMANDS
 
+== Valgrind
+
+----
+$ valgrind --show-leak-kinds=all --leak-check=full ./day01 --file ../../data/day01.txt 
+==20046== Memcheck, a memory error detector
+==20046== Copyright (C) 2002-2017, and GNU GPL'd, by Julian Seward et al.
+==20046== Using Valgrind-3.15.0 and LibVEX; rerun with -h for copyright info
+==20046== Command: ./day01 --file ../../data/day01.txt
+==20046== 
+Answer 1: 3520097
+Answer 2: 5277255
+==20046== 
+==20046== HEAP SUMMARY:
+==20046==     in use at exit: 0 bytes in 0 blocks
+==20046==   total heap usage: 5 allocs, 5 frees, 82,992 bytes allocated
+==20046== 
+==20046== All heap blocks were freed -- no leaks are possible
+==20046== 
+==20046== For lists of detected and suppressed errors, rerun with: -s
+==20046== ERROR SUMMARY: 0 errors from 0 contexts (suppressed: 0 from 0)
+----
